Update LinkedIn URL

--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,11 @@
       <!-- **** Hero Section **** -->
       <section id="hero" class="jumbotron">
         <nav class="social-links">
-          <a rel="noreferrer" href="#!" target="_blank">
+          <a 
+            rel="noreferrer" 
+            href="https://www.linkedin.com/in/joshua-liu-72462018a/" 
+            target="_blank"
+          >
             <i class="fa fa-linkedin fa-inverse"></i>
           </a>
           <a
